applyImpulse local/global coordinate fix. #29419

Closed
opened 2011-11-27 07:19:52 +01:00 by Goran Milovanovic · 11 comments

%%%The current behavior of applyImpulse (GameObject method) doesn't match the behavior described in the documentation.

Instead of a point in world coordinates, it seems to require a coordinate in a kind of "local" space to function properly, where point of impulse is relative to object position (origin).

I've attached an example .blend which demonstrates this discrepancy (applyImpulseTest.blend).

own.applyImpulse(own.worldPosition, some_vector) should only change linear momentum, since the current position of the object in question is being passed (according to the documentation), but in the current version of blender, this code changes angular momentum as well, which is wrong.

Patch is attached.%%%

%%%The current behavior of applyImpulse (GameObject method) doesn't match the behavior described in the documentation. Instead of a point in world coordinates, it seems to require a coordinate in a kind of "local" space to function properly, where point of impulse is relative to object position (origin). I've attached an example .blend which demonstrates this discrepancy (applyImpulseTest.blend). own.applyImpulse(own.worldPosition, some_vector) should only change linear momentum, since the current position of the object in question is being passed (according to the documentation), but in the current version of blender, this code changes angular momentum as well, which is wrong. Patch is attached.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%The cleanest fix would be to add a 'local' flag. That would make the api consistent with applyForce and all other apply....%%%

%%%The cleanest fix would be to add a 'local' flag. That would make the api consistent with applyForce and all other apply....%%%

%%%The function is similarly named, but that doesn't necessarily mean that it belongs in the same category.

I think the original design is correct, in the sense that it recognizes applyImpulse as a function that should act solely in global coordinates.

Can you think of common examples where applyImpulse in local coordinates would be beneficial? (the few that I can think of are better served by other functions)
%%%

%%%The function is similarly named, but that doesn't necessarily mean that it belongs in the same category. I think the original design is correct, in the sense that it recognizes applyImpulse as a function that _should_ act solely in global coordinates. Can you think of common examples where applyImpulse in local coordinates would be beneficial? (the few that I can think of are better served by other functions) %%%

%%%It would make it easier to simulate a moon-lander with a set of thrustors in different positions and orientations. But granted, global coordinates fit most use well.%%%

%%%It would make it easier to simulate a moon-lander with a set of thrustors in different positions and orientations. But granted, global coordinates fit most use well.%%%
Member

%%%hopefully Dalai can have a look%%%

%%%hopefully Dalai can have a look%%%

%%%applyImpulse is still listed to use world coordinates, but is still using local coordinates.

It took far too long to figure out why this was wrong.

I'd personally prefer to leave it local, but it needs documentation.

Can we please have this updated in the documentation?

Thanks.%%%

%%%applyImpulse is still listed to use world coordinates, but is still using local coordinates. It took far too long to figure out why this was wrong. I'd personally prefer to leave it local, but it needs documentation. Can we please have this updated in the documentation? Thanks.%%%
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I have uploaded a patch using the fix from Goran but allowing that the local or global coordinates can be chosen in a similar way that other related functions as ApplyForce, ApplyTorque, etc

The documentation have been ammended too.

I have uploaded a patch using the fix from Goran but allowing that the local or global coordinates can be chosen in a similar way that other related functions as ApplyForce, ApplyTorque, etc The documentation have been ammended too.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Moguri

Added subscriber: @Moguri

The Differential revision was committed as 1f43b083a9.

The Differential revision was committed as 1f43b083a9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29419
No description provided.